--- a/app/css/remotehost.css
+++ b/app/css/remotehost.css
@@ -9,6 +9,7 @@
 	color:#fff;
 	font-size:16px;
 	margin-bottom:5px;
+	height:24px;
 }
 
 #input_hostname{
@@ -109,4 +110,7 @@
 	background-image:url("../image/button_connect_fail_press.png");
 }
 
+#idkey {
+	padding-top:15px;
+}
 
