--- a/app/css/filebrowser.css
+++ b/app/css/filebrowser.css
@@ -27,7 +27,7 @@
 
 }
 
-.fileitem:active, .fileitem:focus .fileitem:checked{
+.fileitem:active, .fileitem:focus, .fileitem:checked{
 	border-color:red;
 }
 
@@ -106,9 +106,9 @@
 }
 
 .select_host select{
-	width:410px;
+	width:422px;
 	height:30px;
-	padding-left:14px;
+	padding-left:2px;
 	line-height:32px;
 	vertical-align:middle;
 	color:#fff;
@@ -120,10 +120,16 @@
 	-moz-appearance:none;
 	appearance:none;
 
+    /* for FF prev 29... */
 	text-indent:9px;
 	text-overflow:'';
 
 	border:none;
+}
+
+/* for IE... */
+.select_host select::-ms-expand{
+    display:none;
 }
 
 .select_host {
