--- a/app/css/filebrowser.css
+++ b/app/css/filebrowser.css
@@ -5,8 +5,8 @@
 	border-style:solid;
 	border-radius:2px;
 	border-width:3px;
-	border-color:#852414;
-	background-color:rgba(20,20,20,1.0);
+	border-color:#72ca2a;
+	background-color:#292929;
 	width:400px;
 	min-width:400px;
 	height:580px;
@@ -28,7 +28,7 @@
 }
 
 .fileitem:active, .fileitem:focus, .fileitem:checked{
-	border-color:red;
+	border-color:#72ca2a;
 }
 
 
@@ -49,18 +49,18 @@
 }
 
 .filelabel_short{
+	width:120px;
 	line-height:70px;
 	text-align:left;
 	font-size:16px;
 	display:inline-block;
 	color:#fff;
 	vertical-align:top;
-	float:left;
-	width:100px;
 	margin-left:5px;
 	text-overflow: ellipsis;
 	white-space: nowrap;
 	overflow: hidden;
+
 }
 
 .back{
@@ -137,18 +137,19 @@
 	border-radius:3px;
 	border-style:solid;
 	border-width:2px;
-	border-color:#852414;
+	border-color:#72ca2a;
 	width:405px;
 	height:36px;
 	overflow:hidden;
 	margin-bottom:30px;
 	background:url("../image/button_bg_selector.png") no-repeat 370px 5px rgba(20,20,20,1.0);
+    background-color:#4d4d4d;
 }
 
 .option_host{
 	color:#fff;
 	text-align:left;
-	background-color:rgba(20,20,20,1);
+	background-color:#4d4d4d;
 }
 
 /* action menu */
@@ -201,7 +202,7 @@
 
 .filepath{
 	font-size:18px;
-	color:#fff;
+	color:#4d4d4d;
 	text-align:left;
 	margin-bottom:15px;
 	overflow:auto;
@@ -215,8 +216,8 @@
 	border:solid;
 	border-radius:20px;
 	border-width:12px;
-	border-color:#852414;
-	background-color:rgba(26,26,26,0.6);
+	border-color:#72ca2a;
+	background-color:#292929;
 	width:400px;
 	min-width:400px;
 	height:412px;
@@ -230,11 +231,11 @@
 	height:400px;
 	border-radius:2px;
 	border-width:2px;
-	border-color:#852414;
+	border-color:#72ca2a;
 	margin-left:60px;
 	padding:15px;
 	text-align:center;
-	background-color:rgba(20,20,20,1.0);
+	background-color:#292929;
 	float:left;
 }
 
