add overwrite confirm dialog. fix directory copy on windows.

--- a/app/css/filebrowser.css
+++ b/app/css/filebrowser.css
@@ -280,6 +280,44 @@
 .buttons_dialog{
 	margin-top:200px;
 }
+
+.confirm_button {
+	margin-top:20px;
+}
+
+#confirm_area {
+	min-height: 100%;
+	min-width: 1024px;
+	width: 100%;
+	height: auto;
+	position: fixed;
+	top: 0;
+	left: 0;
+	visibility: hidden;
+	background-color:#CCCCCC;
+	opacity: 0.7;
+}
+
+#confirm_dialog {
+	top: 50%;
+	left: 50%;
+	width: 400px;
+	height: 200px;
+	margin-top:-100px;
+	margin-left:-200px;
+	position: fixed;
+	visibility: hidden;
+	background-color:#444444;
+}
+
+#confirm_message {
+	transform: translateY(50%);
+	font-family:sans-serif;
+	text-align:center;
+	font-size:20px;
+	color: #ffffff;
+}
+
 /*---------*/
 
 
