--- a/app/css/editor_info_mode.css
+++ b/app/css/editor_info_mode.css
@@ -1,11 +1,3 @@
-.execute_area {
-	position:absolute;
-	top:200px;
-	right:600px;
-	z-index:20;
-	margin:0px;
-}
-
 .info_area {
 	position:relative;
 	overflow:hidden;
@@ -21,14 +13,12 @@
 	border-width:5px;
 	border-color:#72ca2a;
 	background-color:#f4f2e9;
-}
-
-.project_title {
-	position:relative;
-	margin-top:30px;
-	text-align:center;
-	font-size:30px;
-	font-family:sans-serif;
+	-webkit-touch-callout: text;
+	-webkit-user-select: text;
+	-khtml-user-select: text;
+	-moz-user-select: text;
+	-ms-user-select: text;
+	user-select: text;
 }
 
 .info_text_area {
