--- a/app/css/backfire.css
+++ b/app/css/backfire.css
@@ -21,10 +21,10 @@ body {
 
 .settingitem {*/
 	display: flex;
-	display: -webkit-flex;
+	/*display: -webkit-flex;*/
 	margin-top:5px;
 	margin-bottom:5px;
-	flex-direction: row;
+	/*flex-direction: row;*/
 }
 .itemlabel {
 	width: 80px;
