--- a/app/css/editor_edit_mode.css
+++ b/app/css/editor_edit_mode.css
@@ -1,4 +1,3 @@
-
 #editor {
 	margin: 0px;
 	position:absolute;
@@ -11,6 +10,16 @@
 	left:375px;
 	right:10px;
 	bottom:10px;
+}
+
+#separator {
+	background-color:transparent;
+	position:absolute;
+	top:290px;
+	left:368px;
+	width:4px;
+	bottom:10px;
+	cursor: w-resize;
 }
 
 #imageArea {
@@ -58,7 +67,7 @@
 	padding:10px;
 	font-size:16px;
 	color:#fff;
-	background-color:#transparent;
+	background-color:transparent;
 }
 #menubtn {
 	position:absolute;
