--- a/app/css/home.css
+++ b/app/css/home.css
@@ -13,20 +13,37 @@
 	border-radius: 5px;
 	display:none;
 	opacity: 1;
+	text-align:center;
 }
 
 .new_project_content {
 	position:relative;
-	left:60%;
 }
 
 .input-newproject{
-	position:absolute;
-	top:30px;
+	position:relative;
+	top:-30px;
 	width:200px;
 	background-color:#4d4d4d;
 	border-style:none;
 	line-height:38px;
 	border-radius:5px;
 	color:#aaa;
+}
+
+.pane_bottom {
+	position:relative;
+	min-height: 100px;
+	min-width: 1024px;
+	width: 100%;
+	top: 0px;
+	left: 0;
+	z-index:20;
+	padding: 6px 6px 6px 6px;
+	color: #fff;
+	background-color:#4d4d4d; 
+	border-radius: 5px;
+	opacity: 1;
+	
+	text-align:center;
 }
