--- a/app/css/base.css
+++ b/app/css/base.css
@@ -19,6 +19,7 @@ body{
 	background-color:#ffffff;
 	font-family:sans-serif;
 	min-width:800px;
+	-webkit-font-smoothing: antialiased;
 
 	/* selection */
 	-webkit-touch-callout: none;
@@ -27,13 +28,12 @@ body{
 	-moz-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
-	/*           */
 }
 
 button{
 	border-style:none;
 	color:#fff;
-    font-weight:bolder;
+	font-weight:bolder;
 	font-size:22px;
 }
 
@@ -45,7 +45,7 @@ input{
 	color:#fff;
 	font-size:16px;
 	font-family:sans-serif;
-    font-weight:bold;
+	font-weight:bold;
 	text-align:left;
 	border-radius:2px;
 	border-width:2px;
@@ -57,7 +57,7 @@ input{
 }
 
 ::-webkit-scrollbar{
-	width:24px;
+	width:18px;
 }
 
 ::-webkit-scrollbar-button{
@@ -108,8 +108,8 @@ input{
 
 #logo{
 	margin-left:20px;
-    margin-top:0px;
-    margin-bottom:10px;
+	margin-top:0px;
+	margin-bottom:10px;
 	text-align:left;
 	background-image:url("../image/hpcpf_logo.png");
 	background-repeat:no-repeat;
@@ -121,9 +121,9 @@ input{
 
 #version{
 	font-size:22px;
-    font-weight:bolder;
-    margin-top:28px;
-    margin-left:-8px;
+	font-weight:bolder;
+	margin-top:28px;
+	margin-left:-8px;
 	vertical-align:bottom;
 	text-align:left;
 	background-repeat:no-repeat;
@@ -141,7 +141,7 @@ input{
 	height:300px;
 	margin-left:auto;
 	margin-right:auto;
-	margin-top:30px;
+	margin-top:50px;
 	padding-top:0px;
 	background-color:transparent;
 	border:none;
@@ -159,7 +159,7 @@ input{
 .text_title{
 	font-family:sans-serif;
 	font-size:20px;
-    font-weight:600;
+	font-weight:600;
 	margin-top:40px;
 	margin-left:40px;
 	padding-top:30px;
